--- a/_config.yml
+++ b/_config.yml
@@ -106,11 +106,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  name             : "JuYong Seong"
+  avatar           : /assets/images/bio-photo.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "I was born in 1997 and am a college student."
+  location         : "Jeonju, Jeollabuk-do, Korea"
+  email            : "wndyd9557@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
