--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+#haha
+#https://freefrontend.com/html-funny-404-pages/
+
 # Theme Settings
 #
 # Review documentation to determine if you should use `theme` or `remote_theme`
