--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:wndyd9557@gmail.com
-    - label: "Website"
+    - label: "note"
       icon: "fas fa-fw fa-link"
       url: "https://jjudrgn.tistory.com/"
     - label: "Twitter"
