--- a/_config.yml
+++ b/_config.yml
@@ -118,15 +118,15 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:wndyd9557@gmail.com
-    - label: "note"
+      - label: "Work"
+      icon: "ffas fa-fw fa-link"
+      url: "http://oslab.chonbuk.ac.kr/"
+    - label: "Note"
       icon: "fas fa-fw fa-link"
       url: "https://jjudrgn.tistory.com/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      url: "https://www.facebook.com/profile.php?id=100002787695192"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/jjudrgn"
