--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ repository               : "jjudrgn/jjudrgn.github.io" # GitHub username/repo-na
 teaser                   : "/assets/images/test_teaser.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/test_teaser.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2", "utterances", "custom"
