--- a/_config.yml
+++ b/_config.yml
@@ -98,13 +98,14 @@ social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
+    - "https://jjudrgn.tistory.com/"
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : "UA-1234567-8"
+    anonymize_ip         : false # true, false (default)
 
 
 # Site Author
@@ -119,7 +120,7 @@ author:
       icon: "fas fa-fw fa-link"
       url: "http://oslab.chonbuk.ac.kr/"
     - label: "Note"
-      icon: "fas fa-fw fa-link"
+      icon: "fab fa-ubuntu"
       url: "https://jjudrgn.tistory.com/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
